updated w/new capstone link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>Ashley McKellar</h2>
-										<p>Web developer extraordinaire</p>
+										<p>Web developer</p>
 										</header>
 									<p>Over my years of working in the technical support industry, I've acquired a love of problem solving, which has allowed me to begin transitioning into the world of web development. Few things are as exciting as seeing a project come together and seeing the last few pieces of a puzzle fall into place. 
 
@@ -64,6 +64,7 @@
 										One of my favorite things about working in the tech industry is empowering others to realize that they don't have to consider themselves to be tech savvy in order to enjoy the latest devices, apps, and games.
 							</section>
 
+							
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
@@ -87,10 +88,10 @@
 									<p>Explore some of my projects completed during my time at V School</p>
 									<div class="features">
 										<article>
-											<a href="https://github.com/ashleymckellar/assignments/tree/main/projects/axios-todo" class="image"><img src="images/axios-todo-photo.png" alt="" /></a>
+											<a href="https://pablosvehicles.surge.sh" alt="" /></a>
 											<div class="inner">
-												<h4>Not another to do list!</h4>
-												<p>A front end project utilizing Axios</p>
+												<h4>Star Wars fan site</h4>
+												<p>A front end project utilizing React</p>
 											</div>
 										</article>
 										<article>
