--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 									<p>Explore some of my projects completed during my time at V School</p>
 									<div class="features">
 										<article>
-											<a href="https://pablosvehicles.surge.sh" alt="" /></a>
+											<a href="https://pablosvehicles.surge.sh" class="image"><img src="images/starwars.png" alt=""/></a>
 											<div class="inner">
 												<h4>Star Wars fan site</h4>
 												<p>A front end project utilizing React</p>
