--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 											<a href="https://pablosvehicles.surge.sh" class="image"><img src="images/starwars.png" alt=""/></a>
 											<div class="inner">
 												<h4>Star Wars fan site</h4>
-												<p>A front end project utilizing React</p>
+												<p>A front end project utilizing data from the Star Wars API (swapi).</p>
 											</div>
 										</article>
 										<article>
