updated w/deployed site url

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="https://github.com/ashleymckellar/level6-capstone" class="image"><img src="images/hotSaucescreenshot.png" alt="" /></a>
+											<a href="https://hotsauceworld-777aaa9774df.herokuapp.com/" class="image"><img src="images/hotSaucescreenshot.png" alt="" /></a>
 											<div class="inner">
 												<h4>Hot Sauce Wiki</h4>
 												<p>Full stack web app, complete with authentication, this site is a home for hot sauce lovers to explore their favorite sauces and submit new ones.</p>
