--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
 									</div>
 								</div>
 							</section>
-
-						
-
-				
+<section id="footer">
+							<ul class="copyright">
+								<li>&copy; 2023 Ashley McKellar Enterprises. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							</ul>
 			
-
+						</section>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
