--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>Ashley McKellar</h2>
-										<p>Web developer</p>
+										<p>Software developer</p>
 										</header>
 									<p>
 										In my technical and customer support career, I've honed my skills in handling diverse clients and complex technical challenges, emphasizing empathy, effective communication, and problem-solving. I recently completed a full stack JavaScript certification at V School, specializing in the MERN stack. Since completing my certification, I've been actively engaged as a member of a developer team at V School, participating in weekly scrums, and completing internship projects for clients under a project manager. I'm now seeking my first full-time role as a front-end or full-stack developer.</p>
@@ -109,7 +109,7 @@
 								</div>
 							</section>
 							<section id="four">
-								<div class="container">
+								<!-- <div class="container">
 									<h3>Contact Me</h3>
 									<p>Are you interested in collaborating?   Let's get in touch!</p>
 									<form id="contact-form">
@@ -126,11 +126,11 @@
 											</div>
 										</div>
 									</form>
-								</div>
+								</div> -->
 							</section>
 <section id="footer">
 							<ul class="copyright">
-								<li>&copy; 2023 Ashley McKellar Enterprises. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; 2024 Ashley McKellar Enterprises. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 			
 						</section>
