added linkedin link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
 		</script>
+		<script src="https://kit.fontawesome.com/b1c5dc229e.js" crossorigin="anonymous"></script>
 		<script type="text/javascript">
 			(function(){
 				console.log('Initializing EmailJS...');
@@ -56,6 +57,7 @@
 						
 						<li><a href="https://github.com/ashleymckellar" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto:ashley.l.mckellar@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/ashley-mckellar/"><i class="fa-brands fa-linkedin"></i></a></li>
 					</ul>
 				</footer>
 			</section>
