updated sidhu farms link

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 											<a href="https://sidhu-farms1.vercel.app/" class="image"><img src="images/SidhuFarmsimg.png" alt="" /></a>
 											<div class="inner">
 												<h4>Sidhu Farms</h4>
-												<p>I partnered with another developer and project manager to build the Sidhu Farms static site using React. My key contributions included developing the crops component, which involved implementing conditional rendering and media queries. I also utilized Tailwind CSS to ensure the site was fully responsive across various devices. </p>
+												<p>I partnered with another developer and project manager to build the Sidhu Farms static site using React. My key contributions included developing the crops component, which involved implementing conditional rendering and media queries. I also utilized Tailwind CSS to ensure the site was fully responsive across various devices. (Work in progress.)</p>
 											</div>
 										</article>
 										<article>
