added hot sauce world

--- a/index.html
+++ b/index.html
@@ -105,7 +105,13 @@
 												<p>I collaborated with three developers to build a new React-based site for DJ Bentley Taylor, where I implemented a MixCloud music player, EmailJS-powered contact form with a React modal, and integrated the MixCloud API for his bio information. I was responsible for deploying the site as a static one via Render.</p>
 											</div>
 										</article>
-										
+										<article>
+											<a href="https://hotsauce-world.com" class="image"><img src="images/HotSauceWorld.png" alt="" /></a>
+											<div class="inner">
+												<h4>Hot Sauce World</h4>
+												<p>Hot Sauce World is a hub for hot sauce enthusiasts. This is a full stack application utilizing the following stack: React, NodeJS, API built with MongoDB, and authentication using Bcrypt and JWT. This site has been deployed on Heroku with a custom domain. It's also utilizing HTTPS using an SSL certificate provided by Let's Encrypt.</p>
+											</div>
+										</article>
 										</article>
 									</div>
 								</div>
